infra/k8s/chat-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chat-postgres
spec:
  serviceName: 'chat-postgres-service'
  replicas: 1
  selector:
    matchLabels:
      app: postgres-chat
  template:
    metadata:
      labels:
        app: postgres-chat
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 10Gi
