infra/k8s/auth-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-service
spec:
  selector:
    app: postgres-auth
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None # Headless service for StatefulSet
