infra/k8s/chat-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-postgres-service
spec:
  selector:
    app: postgres-chat
  ports:
    - name: chat
      protocol: TCP
      port: 5432
      targetPort: 5432
