infra/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service
spec:
  replicas: 1 # You can adjust the number of replicas based on your scaling needs
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
        - name: client-service
          image: dyahraus/client-service
          ports:
            - containerPort: 3000 # The port that your client app listens on
          # env:
          #   - name: NODE_ENV
          #     value: 'production'
          #   - name: FRONTEND_URL
          #     value: 'https://rallyvite.com' # Set the appropriate URL for your frontend
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client-service
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
