infra/k8s/events-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      containers:
        - name: events-service
          image: dyahraus/events-service
---
apiVersion: v1
kind: Service
metadata:
  name: events-service
spec:
  selector:
    app: events-service
  ports:
    - name: events
      protocol: TCP
      port: 5000
      targetPort: 5000
