infra/k8s/events-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-postgres-service
spec:
  selector:
    app: postgres-events
  ports:
    - name: events
      protocol: TCP
      port: 5432
      targetPort: 5432
