infra/k8s/kafka-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: kafka-port
  clusterIP: None
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.3.0
          ports:
            - containerPort: 9092
              name: kafka-port
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 30
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  echo "Waiting for Zookeeper to be ready..."
                  while ! kafka-topics --zookeeper zookeeper-service:2181 --list; do
                    echo "Waiting for Zookeeper..."
                    sleep 1
                  done
                  echo "Zookeeper is ready!"
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 6
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 1Gi
